--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "brfs": "1.4.0",
     "browserify": "^9.0.8",
     "bus": "0.1.0",
+    "canvas": "^1.3.0",
     "change-case": "^2.3.0",
     "chart.js": "1.0.2",
     "co-prompt": "~1.0.0",
