--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "qs": "2.4.1",
     "removed": "0.0.5",
     "store": "1.3.17",
+    "string-natural-compare": "^1.1.1",
     "stringify": "3.1.0",
     "strip": "0.0.7",
     "stylus": "0.52.4",
