--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "brfs": "1.4.0",
     "browserify": "^9.0.8",
     "bus": "0.1.0",
+    "canvas": "^1.3.1",
     "change-case": "^2.3.0",
     "chart.js": "1.0.2",
     "co-prompt": "~1.0.0",
@@ -81,7 +82,7 @@
     "democracyos-headroom.js": "^0.7.0",
     "democracyos-list.js": "^1.1.4",
     "democracyos-loading-lock": "^0.1.0",
-    "democracyos-notifier": "^0.0.13",
+    "democracyos-notifier": "git://github.com/democracy-os-fr/notifier.git#fr",
     "democracyos-quill": "^0.19.12",
     "democracyos-side-comments": "~0.0.20",
     "democracyos-snap.js": "^2.0.0",
